update instructor mainance

--- a/src/main/resources/templates/adminDashBoard/fragments/courseMaintenanceContent.html
+++ b/src/main/resources/templates/adminDashBoard/fragments/courseMaintenanceContent.html
@@ -13,8 +13,12 @@
                 <a class="btn btn-success" th:href="@{/admin/courseMaintenance/check-overdue}">
                     <i class="fas fa-check-circle me-2"></i> Check Overdue
                 </a>
+                <a class="btn btn-success me-2" th:href="@{/admin/courseMaintenance/process-monthly}">
+                    <i class="fas fa-check-circle me-2"></i> Check Ticket
+                </a>
             </div>
         </div>
+
     </div>
 
     <!-- Success Alert -->
