--- a/src/main/resources/templates/homePage/home.html
+++ b/src/main/resources/templates/homePage/home.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" th:href="@{css/styleHome.css}">
 </head>
 <body>
+<div th:replace="~{homePage/fragments/notification :: notification}"></div>
 <!-- Header/Navigation -->
 <header class="bg-black border-bottom border-dark">
     <div class="container">
