--- a/src/main/resources/templates/homePage/qr_checkout.html
+++ b/src/main/resources/templates/homePage/qr_checkout.html
@@ -131,10 +131,17 @@
     </div>
     <script th:inline="javascript">
         /*<![CDATA[*/
+        var isMaintenance = /*[[${isMaintenance}]]*/ false;
+        var maintenanceId = /*[[${maintenanceId}]]*/ null;
         var orderId = /*[[${orderId}]]*/ null;
+        console.log("isMaintenance:", isMaintenance, "maintenanceId:", maintenanceId, "orderId:", orderId);
+        var id = isMaintenance ? maintenanceId : orderId;
         var pollingInterval = setInterval(function() {
-            if (orderId) {
-                fetch('/api/order/status?orderId=' + orderId)
+            if (id) {
+                var url = isMaintenance
+                    ? '/api/maintenance/status?maintenanceId=' + id
+                    : '/api/order/status?orderId=' + id;
+                fetch(url)
                     .then(res => {
                         if (!res.ok) {
                             console.error('HTTP error! status: ' + res.status);
@@ -162,10 +169,10 @@
                         }
                     })
                     .catch(error => {
-                        console.error('Error fetching order status:', error);
+                        console.error('Error fetching status:', error);
                     });
             }
-        }, 3000);
+        }, 2000);
         /*]]>*/
     </script>
 </body>
